--- a/PinDecoder.Android/Properties/AndroidManifest.xml
+++ b/PinDecoder.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.redblup.pindecoder">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="3" android:versionName="1.3" package="com.redblup.pindecoder">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="PinDecoder.Android"></application>
+	<application android:label="PinDecoder.Android" android:icon="@drawable/pindecode_icon_01"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
